--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~3.20.0",
     "shortid": "^2.2.16",
     "yup": "^1.1.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
