--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "review",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Photo_1685703048626.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Photo_1685703048626.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,7 +19,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/Photo_1685703048626.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.oladaniel.review"
